Fix page overflow on mobile devices

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ body {
         justify-content: top;
         text-align: center;
         width: 100%;
-        height: 100%;
+        min-height: 100vh;
         /* Scroll Snap */
         scroll-snap-align: top;
         word-break: break-word;
@@ -189,6 +189,7 @@ body {
         height: 4rem;
     }
     .toggler {
+
         display: none;
     }
     .navbar {
